@@ -4,6 +4,7 @@ CHANGELOG
 * introduction of rules Target field support in the core lib and in utils/filters
 * NatRule display() outputs more informations, directly benefits to rules-edit.php
 * PH::getPanObjectFromconfig() new helper function to load Panorama or Firewall conf
+* introduced plugin system for address/rules/services-edit.php
 
 utils:
 rules-edit : new filters 'target is.any' 'target has xxxxx/vsysX'
